--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Animals"
+    title="Beautiful Creatures"
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Animals"
+    title="Beautiful Creatures"
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Animals"
+    title="Beautiful Creatures"
+    />
+    
   </body>
 </html>
